2009-09-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/cals.c (Huffman2DEncodeImage): Fix test failures when
	doing I/O to an in-memory blob.

	* coders/pcl.c (WritePCLImage): Use a different control code to
	(hopefully) eject the page.  Patch submitted by John Sergeant.

2009-09-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/Makefile.am: Add CALS tests.  Skip testing deep images for
	most formats which don't support deep images.

	* coders/cals.c: CALS module was not being built under Windows
	with MSVC.  Now it is.

	* VisualMagick/configure/configure.cpp (process_library): CALS
	module is dependent on TIFF library.

	* coders/cals.c (WriteCALSImage): Allow CALS writing at any time,
	but only enable CALS reader if libtiff is present at build time.

	* coders/{cals.c,pdf.c,ps2.c,ps3.c} (Huffman2DEncodeImage): Force
	TIFF image type to bilevel type.

	* config/modules.mgk, VisualMagick/bin/modules.mkg: CAL-->CALS
	rather than CALS-->CAL.

2009-09-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/benchmarks.rst: Updated GraphicsMagick vs ImageMagick
	benchmark results.

2009-09-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/cals.c (WriteCALSImage): Initial CALS Type 1 writer
	implementation.  Contributed by John Sergeant.

	* coders/png.c (ReadOnePNGImage): Fresh pixels should be set using
	SetImagePixels().

2009-09-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/msl.c, doc/conjure.imdoc: Add support for a new 'profile'
	command in MSL/conjure which applies, adds, or removes one or more
	IPTC, ICC or generic profiles from a file.  Work contributed by
	John Sergeant.

2009-09-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/nt_base.c (NTGhostscriptFind): Make sure we close the
	registry key.  Log any Windows error messages.

	* magick/profile.c (AppendImageProfile): New function to add or
	append a profile.  If the profile already exists, then the data
	provided is appended to it.
