@@ -100,7 +100,8 @@ static MagickTsdKey_t tsd_key = (MagickTsdKey_t) NULL;
 /*
   Forward declarations.
 */
-static unsigned int
+static MagickPassFail
+  WriteGROUP4RAWImage(const ImageInfo *image_info,Image *image),
   WritePTIFImage(const ImageInfo *,Image *),
   WriteTIFFImage(const ImageInfo *,Image *);
 
@@ -120,11 +121,12 @@ static unsigned int
 %
 %  The format of the IsTIFF method is:
 %
-%      unsigned int IsTIFF(const unsigned char *magick,const size_t length)
+%      MagickBool IsTIFF(const unsigned char *magick,const size_t length)
 %
 %  A description of each parameter follows:
 %
-%    o status:  Method IsTIFF returns True if the image format type is TIFF.
+%    o status:  Method IsTIFF returns MagickTrue if the image format type
+%               is TIFF.
 %
 %    o magick: This string is generally the first few bytes of an image file
 %      or blob.
@@ -133,7 +135,8 @@ static unsigned int
 %
 %
 */
-static unsigned int IsTIFF(const unsigned char *magick,const size_t length)
+static MagickBool
+IsTIFF(const unsigned char *magick,const size_t length)
 {
   if (length < 8)
     return(False);
@@ -266,8 +269,9 @@ void ExtensionTagsInitialize(void)
   Return MagickTrue if libtiff supports the indicated compression type.
   Sets buffer pointed to by 'compression_name' to the name of the compression.
 */
-static MagickBool CompressionSupported(const CompressionType compression,
-                                       char *compression_name)
+static MagickBool
+CompressionSupported(const CompressionType compression,
+		     char *compression_name)
 {
   uint16
     compress_tag;
@@ -408,7 +412,8 @@ static MagickBool CompressionSupported(const CompressionType compression,
 /*
   Convert a libtiff compression tag to a human readable string.
 */
-static const char *CompressionTagToString(unsigned int compress_tag)
+static const char *
+CompressionTagToString(unsigned int compress_tag)
 {
   const char
     *result = "Unknown";
@@ -471,7 +476,8 @@ static const char *CompressionTagToString(unsigned int compress_tag)
   return result;
 }
 
-static const char *PhotometricTagToString(unsigned int photometric)
+static const char *
+PhotometricTagToString(unsigned int photometric)
 {
   const char
     *result = "Unknown";
@@ -515,8 +521,8 @@ static const char *PhotometricTagToString(unsigned int photometric)
   return result;
 }
 
-static unsigned int ReadNewsProfile(char *text,long int length,Image *image,
-  int type)
+static unsigned int
+ReadNewsProfile(char *text,long int length,Image *image,int type)
 {
   register unsigned char
     *p;
@@ -569,7 +575,8 @@ extern "C" {
 #endif
 
 /* Close BLOB */
-static int TIFFCloseBlob(thandle_t image_handle)
+static int
+TIFFCloseBlob(thandle_t image_handle)
 {
   Image
     *image = (Image *) image_handle;
@@ -584,7 +591,8 @@ static int TIFFCloseBlob(thandle_t image_handle)
 }
 
 /* Report errors. */
-static unsigned int TIFFErrors(const char *module,const char *format,
+static unsigned int
+TIFFErrors(const char *module,const char *format,
   va_list warning)
 {
   ExceptionInfo
@@ -603,7 +611,8 @@ static unsigned int TIFFErrors(const char *module,const char *format,
 }
 
 /* Memory map entire input file in read-only mode. */
-static int TIFFMapBlob(thandle_t image,tdata_t *base,toff_t *size)
+static int
+TIFFMapBlob(thandle_t image,tdata_t *base,toff_t *size)
 {
   *base = (tdata_t *) GetBlobStreamData((Image *) image);
   if (*base)
@@ -623,7 +632,8 @@ static int TIFFMapBlob(thandle_t image,tdata_t *base,toff_t *size)
 }
 
 /* Read BLOB data at current offset */
-static tsize_t TIFFReadBlob(thandle_t image,tdata_t data,tsize_t size)
+static tsize_t
+TIFFReadBlob(thandle_t image,tdata_t data,tsize_t size)
 {
 #if LOG_BLOB_IO
   if (((Image *) image)->logging)
@@ -634,7 +644,8 @@ static tsize_t TIFFReadBlob(thandle_t image,tdata_t data,tsize_t size)
 }
 
 /* Seek to BLOB offset */
-static toff_t TIFFSeekBlob(thandle_t image,toff_t offset,int whence)
+static toff_t
+TIFFSeekBlob(thandle_t image,toff_t offset,int whence)
 {
 #if LOG_BLOB_IO
   if (((Image *) image)->logging)
@@ -649,7 +660,8 @@ static toff_t TIFFSeekBlob(thandle_t image,toff_t offset,int whence)
 }
 
 /* Obtain BLOB size */
-static toff_t TIFFGetBlobSize(thandle_t image)
+static toff_t
+TIFFGetBlobSize(thandle_t image)
 {
 #if LOG_BLOB_IO
   if (((Image *) image)->logging)
@@ -660,7 +672,8 @@ static toff_t TIFFGetBlobSize(thandle_t image)
 }
 
 /* Unmap BLOB memory */
-static void TIFFUnmapBlob(thandle_t ARGUNUSED(image),
+static void
+TIFFUnmapBlob(thandle_t ARGUNUSED(image),
                           tdata_t ARGUNUSED(base),
                           toff_t ARGUNUSED(size))
 {
@@ -673,8 +686,8 @@ static void TIFFUnmapBlob(thandle_t ARGUNUSED(image),
 }
 
 /* Report warnings. */
-static unsigned int TIFFWarnings(const char *module,const char *format,
-  va_list warning)
+static unsigned int
+TIFFWarnings(const char *module,const char *format,va_list warning)
 {
 /*   ExceptionInfo */
 /*     *tiff_exception; */
@@ -695,7 +708,8 @@ static unsigned int TIFFWarnings(const char *module,const char *format,
 }
 
 /* Write data a current offset */
-static tsize_t TIFFWriteBlob(thandle_t image,tdata_t data,tsize_t size)
+static tsize_t
+TIFFWriteBlob(thandle_t image,tdata_t data,tsize_t size)
 {
 #if LOG_BLOB_IO
   if (((Image *) image)->logging)
@@ -710,7 +724,8 @@ static tsize_t TIFFWriteBlob(thandle_t image,tdata_t data,tsize_t size)
   Convert TIFF data from libtiff "native" format to byte-parsable big endian
 */
 #if !defined(WORDS_BIGENDIAN)
-static void SwabDataToBigEndian(const uint16 bits_per_sample, tdata_t data,
+static void
+SwabDataToBigEndian(const uint16 bits_per_sample, tdata_t data,
                                 const tsize_t size)
 {
   if (bits_per_sample == 64U)
@@ -742,7 +757,8 @@ static void SwabDataToBigEndian(const uint16 bits_per_sample, tdata_t data,
   Convert TIFF data from byte-parsable big endian to libtiff "native" format.
 */
 #if !defined(WORDS_BIGENDIAN)
-static void SwabDataToNativeEndian(const uint16 bits_per_sample, tdata_t data,
+static void
+SwabDataToNativeEndian(const uint16 bits_per_sample, tdata_t data,
                                    const tsize_t size)
 {
   if (bits_per_sample == 64)
@@ -773,7 +789,8 @@ static void SwabDataToNativeEndian(const uint16 bits_per_sample, tdata_t data,
 /*
   Initialize the image colormap.
 */
-static MagickPassFail InitializeImageColormap(Image *image, TIFF *tiff)
+static MagickPassFail
+InitializeImageColormap(Image *image, TIFF *tiff)
 {
   uint16
     bits_per_sample,
@@ -918,13 +935,14 @@ static MagickPassFail InitializeImageColormap(Image *image, TIFF *tiff)
   consumed by one pixel. Returns MagickPass if the photometric is
   supported.
 */
-static MagickPassFail QuantumTransferMode(const Image *image,
-                                          const uint16 photometric,
-                                          const uint16 sample_format,
-                                          const uint16 planar_config,
-                                          const unsigned int plane,
-                                          QuantumType *quantum_type,
-                                          int *quantum_samples)
+static MagickPassFail
+QuantumTransferMode(const Image *image,
+		    const uint16 photometric,
+		    const uint16 sample_format,
+		    const uint16 planar_config,
+		    const unsigned int plane,
+		    QuantumType *quantum_type,
+		    int *quantum_samples)
 {
   *quantum_type=UndefinedQuantum;
   *quantum_samples=0;
@@ -1067,11 +1085,12 @@ static MagickPassFail QuantumTransferMode(const Image *image,
   which contain extra samples while optimizing performance for images
   without extra samples.
 */
-static void CompactSamples( const unsigned long total_pixels,
-                            const unsigned int bits_per_sample,
-                            const unsigned int samples_per_pixel,
-                            const unsigned int quantum_samples,
-                            unsigned char *samples)
+static void
+CompactSamples( const unsigned long total_pixels,
+		const unsigned int bits_per_sample,
+		const unsigned int samples_per_pixel,
+		const unsigned int quantum_samples,
+		unsigned char *samples)
 {
   if (samples_per_pixel > quantum_samples)
     {
@@ -1114,7 +1133,8 @@ static void CompactSamples( const unsigned long total_pixels,
 /*
   Convert selected pixel area to associated alpha representation.
 */
-static void AssociateAlphaRegion(Image *image)
+static void
+AssociateAlphaRegion(Image *image)
 {
   register PixelPacket
     *q;
@@ -1149,7 +1169,8 @@ static void AssociateAlphaRegion(Image *image)
   Convert associated alpha to internal representation for selected
   pixel area.
 */
-static void DisassociateAlphaRegion(Image *image)
+static void
+DisassociateAlphaRegion(Image *image)
 {
   register PixelPacket
     *q;
@@ -1197,8 +1218,8 @@ typedef enum
   RGBAPuntMethod             /* RGBA whole-image method (last resort) */
 } TIFFMethod;
 
-static Image *ReadTIFFImage(const ImageInfo *image_info,
-  ExceptionInfo *exception)
+static Image *
+ReadTIFFImage(const ImageInfo *image_info,ExceptionInfo *exception)
 {
   char
     *text;
@@ -2691,14 +2712,16 @@ static Image *ReadTIFFImage(const ImageInfo *image_info,
 %
 %  The format of the RegisterTIFFImage method is:
 %
-%      RegisterTIFFImage(void)
+%      void RegisterTIFFImage(void)
 %
 */
-ModuleExport void RegisterTIFFImage(void)
+ModuleExport void
+RegisterTIFFImage(void)
 {
-#define TIFFDescription  "Tagged Image File Format"
 #define BIGTIFFDescription  "Tagged Image File Format (64-bit offsets)"
+#define GROUP4RAWDescription "CCITT Group4 RAW"
 #define PTIFDescription "Pyramid encoded TIFF"
+#define TIFFDescription  "Tagged Image File Format"
 #if defined(HasTIFF)
 
   static char
@@ -2743,6 +2766,22 @@ ModuleExport void RegisterTIFFImage(void)
   entry->coder_class=PrimaryCoderClass;
   (void) RegisterMagickInfo(entry);
 #endif /* defined(HasBigTIFF) */
+
+  /*
+    CCITT Group4 RAW encoded page.
+  */
+  entry=SetMagickInfo("GROUP4RAW");
+  entry->thread_support=MagickTrue;
+  /* entry->decoder=(DecoderHandler) ReadGROUP4RAWImage; */
+  entry->encoder=(EncoderHandler) WriteGROUP4RAWImage;
+  entry->raw=MagickTrue;
+  entry->adjoin=MagickFalse;
+  entry->seekable_stream=MagickFalse;
+  entry->extension_treatment=IgnoreExtensionTreatment;
+  entry->stealth=MagickTrue; /* Don't list in '-list format' output */
+  entry->description=GROUP4RAWDescription;
+  entry->module="TIFF";
+  (void) RegisterMagickInfo(entry);
 
   /*
     Pyramid TIFF (sequence of successively smaller versions of the same image)
@@ -2796,7 +2835,7 @@ ModuleExport void RegisterTIFFImage(void)
 #endif /* defined(EXTEND_TIFF_TAGS) */
 
 
-#endif
+#endif /* if defined(HasTIFF) */
 }
 
 /*
@@ -2815,15 +2854,17 @@ ModuleExport void RegisterTIFFImage(void)
 %
 %  The format of the UnregisterTIFFImage method is:
 %
-%      UnregisterTIFFImage(void)
+%      void UnregisterTIFFImage(void)
 %
 */
-ModuleExport void UnregisterTIFFImage(void)
+ModuleExport void
+UnregisterTIFFImage(void)
 {
 #if defined(HasTIFF)
 #if defined(HasBigTIFF)
   (void) UnregisterMagickInfo("BIGTIFF");
 #endif /* defined(HasBigTIFF) */
+  (void) UnregisterMagickInfo("GROUP4RAW");
   (void) UnregisterMagickInfo("PTIF");
   (void) UnregisterMagickInfo("TIF");
   (void) UnregisterMagickInfo("TIFF");
@@ -2838,6 +2879,183 @@ ModuleExport void UnregisterTIFFImage(void)
     }
 #endif
 }
+
+#if defined(HasTIFF)
+/*
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%                                                                             %
+%                                                                             %
+%                                                                             %
+%   W r i t e G R O U P 4 R A W I m a g e                                     %
+%                                                                             %
+%                                                                             %
+%                                                                             %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+%  Method WriteGROUP4RAWImage writes an image as raw Group4 compressed data.
+%
+%  The format of the WriteGROUP4RAWImage method is:
+%
+%      MagickPassFail WriteGROUP4RAWImage(const ImageInfo *image_info,Image *image)
+%
+%  A description of each parameter follows:
+%
+%    o status:  Method WriteGROUP4RAWImage return True if the image is written.
+%      False is returned is there is of a memory shortage or if the image
+%      file cannot be opened for writing.
+%
+%    o image_info: Specifies a pointer to a ImageInfo structure.
+%
+%    o image:  A pointer to an Image structure.
+%
+%
+*/
+static MagickPassFail
+WriteGROUP4RAWImage(const ImageInfo *image_info,Image *image)
+{
+  char
+    temporary_filename[MaxTextExtent];
+
+  Image
+    *huffman_image;
+
+  ImageInfo
+    *clone_info;
+
+  TIFF
+    *tiff;
+
+  uint32
+    *byte_count;
+
+  unsigned long
+    strip_size;
+
+  uint16
+    fillorder;
+
+  unsigned char
+    *strip;
+
+  register long
+    i;
+
+  long
+    count;
+
+  MagickPassFail
+    status;
+
+  /*
+    Write image as CCITTFax4 TIFF image.
+  */
+  assert(image_info != (ImageInfo *) NULL);
+  assert(image_info->signature == MagickSignature);
+  assert(image != (Image *) NULL);
+  assert(image->signature == MagickSignature);
+
+  if(!AcquireTemporaryFileName(temporary_filename))
+    ThrowWriterException(FileOpenError,UnableToCreateTemporaryFile,image);
+
+  huffman_image=CloneImage(image,0,0,True,&image->exception);
+  if (huffman_image == (Image *) NULL)
+    return(False);
+
+  (void) SetImageType(huffman_image,BilevelType);
+  FormatString(huffman_image->filename,"tiff:%s",temporary_filename);
+  clone_info=CloneImageInfo((ImageInfo *) NULL);
+  clone_info->compression=Group4Compression;
+  clone_info->type=BilevelType;
+  (void) AddDefinitions(clone_info,"tiff:strip-per-page=TRUE",
+                        &image->exception);
+  (void) AddDefinitions(clone_info,"tiff:fill-order=msb2lsb",
+                        &image->exception);
+  status=WriteImage(clone_info,huffman_image);
+  if (status == MagickFail)
+    CopyException(&image->exception,&huffman_image->exception);
+  DestroyImageInfo(clone_info);
+  DestroyImage(huffman_image);
+  if (status == MagickFail)
+    {
+      (void) LiberateTemporaryFile(temporary_filename);
+      return MagickFail;
+    }
+
+  (void) MagickTsdSetSpecific(tsd_key,(void *) (&image->exception));
+  (void) TIFFSetErrorHandler((TIFFErrorHandler) TIFFErrors);
+  (void) TIFFSetWarningHandler((TIFFErrorHandler) TIFFWarnings);
+
+  tiff=TIFFOpen(temporary_filename,"rb");
+  if (tiff == (TIFF *) NULL)
+    {
+      (void) LiberateTemporaryFile(temporary_filename);
+      return MagickFail;
+    }
+
+  /*
+    Allocate raw strip buffer.
+  */
+  byte_count=0;
+  if (TIFFGetField(tiff,TIFFTAG_STRIPBYTECOUNTS,&byte_count) != 1)
+    {
+      TIFFClose(tiff);
+      (void) LiberateTemporaryFile(temporary_filename);
+      return MagickFail;
+    }
+
+  strip_size=byte_count[0];
+  for (i=1; i < (long) TIFFNumberOfStrips(tiff); i++)
+    if (byte_count[i] > strip_size)
+      strip_size=byte_count[i];
+  /* strip_size=TIFFStripSize(tiff); */
+  (void) LogMagickEvent(CoderEvent,GetMagickModule(),
+                        "Allocating %lu bytes of memory for TIFF strip",
+                        (unsigned long) strip_size);
+  strip=MagickAllocateMemory(unsigned char *,strip_size);
+  if (strip == (unsigned char *) NULL)
+    {
+      TIFFClose(tiff);
+      (void) LiberateTemporaryFile(temporary_filename);
+      ThrowWriterException(ResourceLimitError,MemoryAllocationFailed,
+			   image);
+    }
+
+  if ((status=OpenBlob(image_info,image,WriteBinaryBlobMode,&image->exception))
+      == MagickFail)
+    {
+      MagickFreeMemory(strip);
+      TIFFClose(tiff);
+      (void) LiberateTemporaryFile(temporary_filename);
+      ThrowWriterException(FileOpenError,UnableToOpenFile,image);
+    }
+
+  /*
+    Compress runlength encoded to 2D Huffman pixels.
+  */
+  (void) LogMagickEvent(CoderEvent,GetMagickModule(),
+                        "Output 2D Huffman pixels.");
+  (void) TIFFGetFieldDefaulted(tiff,TIFFTAG_FILLORDER,&fillorder);
+  for (i=0; i < (long) TIFFNumberOfStrips(tiff); i++)
+  {
+    count=TIFFReadRawStrip(tiff,(uint32) i,strip,(long) byte_count[i]);
+    if (fillorder == FILLORDER_LSB2MSB)
+      TIFFReverseBits(strip,count);
+
+    (void) LogMagickEvent(CoderEvent,GetMagickModule(),
+                          "Writing %lu strip bytes to blob ...",
+                          (unsigned long) count);
+    if (WriteBlob(image,count,strip) != (size_t) count)
+      status=MagickFail;
+  }
+
+  MagickFreeMemory(strip);
+  TIFFClose(tiff);
+
+  (void) LiberateTemporaryFile(temporary_filename);
+  CloseBlob(image);
+  return status;
+}
+#endif /* if defined(HasTIFF) */
 
 #if defined(HasTIFF)
 /*
@@ -2870,7 +3088,8 @@ ModuleExport void UnregisterTIFFImage(void)
 %
 %
 */
-static MagickPassFail WritePTIFImage(const ImageInfo *image_info,Image *image)
+static MagickPassFail
+WritePTIFImage(const ImageInfo *image_info,Image *image)
 {
   Image
     *pyramid_image;
@@ -2948,7 +3167,7 @@ static MagickPassFail WritePTIFImage(const ImageInfo *image_info,Image *image)
 %
 %  The format of the WriteTIFFImage method is:
 %
-%      unsigned int WriteTIFFImage(const ImageInfo *image_info,Image *image)
+%      MagickPassFail WriteTIFFImage(const ImageInfo *image_info,Image *image)
 %
 %  A description of each parameter follows:
 %
@@ -2963,10 +3182,11 @@ static MagickPassFail WritePTIFImage(const ImageInfo *image_info,Image *image)
 %
 */
 
-static void WriteNewsProfile(TIFF *tiff,
-                             int profile_tag,
-                             const unsigned char *profile_data,
-                             const size_t profile_length)
+static void
+WriteNewsProfile(TIFF *tiff,
+		 int profile_tag,
+		 const unsigned char *profile_data,
+		 const size_t profile_length)
 {
   unsigned char
     *profile=0;
@@ -3040,7 +3260,8 @@ static void WriteNewsProfile(TIFF *tiff,
 #if !defined(TIFFDefaultStripSize)
 #define TIFFDefaultStripSize(tiff,request)  ((8*1024)/TIFFScanlineSize(tiff))
 #endif
-static MagickPassFail WriteTIFFImage(const ImageInfo *image_info,Image *image)
+static MagickPassFail
+WriteTIFFImage(const ImageInfo *image_info,Image *image)
 {
   char
     filename[MaxTextExtent],
