@@ -24,6 +24,8 @@
 2009-09-23  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> coders/tiff.c (WriteGROUP4RAWImage): Added a GROUP4RAW encoder.
+
   <LI> coders/cals.c (Huffman2DEncodeImage): Fix test failures when
         doing I/O to an in-memory blob.
 
